--- a/src/app/modules/notifications/v3/notification.component.html
+++ b/src/app/modules/notifications/v3/notification.component.html
@@ -7,7 +7,9 @@
   >
     <div
       class="m-notifications__notification"
-      [class.m-notifications__notification--noPreview]="!entity"
+      [class.m-notifications__notification--noPreview]="
+        !entity || entity.type === 'user'
+      "
       (click)="onClick($event)"
     >
       <div class="m-notificationsNotification__avatar">
