--- a/src/app/modules/notifications/flyout.component.html
+++ b/src/app/modules/notifications/flyout.component.html
@@ -8,6 +8,16 @@
       [scrollSource]="scrollableArea"
     ></m-notifications__list>
   </div>
+
+  <div class="m-notificationsFlyout__bottomContainer">
+    <a
+      [routerLink]="['/notifications/v3']"
+      (click)="close()"
+      i18n="@@NOTIFICATIONS__FLYOUT__VIEW_ALL_ACTION_V3"
+    >
+      View all notifications
+    </a>
+  </div>
 </ng-container>
 <ng-template #v2>
   <div
