--- a/src/app/modules/notifications/v3/list.component.html
+++ b/src/app/modules/notifications/v3/list.component.html
@@ -1,13 +1,33 @@
 <div class="m-tabs__container">
   <div class="m-tabs__tab" (click)="setFilter('')">
-    <a
-      [class.m-tabs__tab--selected]="(filter$ | async) === ''"
-      i18n="@@COMMON__ALL"
-      >All</a
-    >
+    <a [class.m-tabs__tab--selected]="(filter$ | async) === ''">
+      <m-tooltip icon="list" anchor="bottom">All notifications</m-tooltip>
+    </a>
   </div>
   <div class="m-tabs__tab" (click)="setFilter('tags')">
-    <a [class.m-tabs__tab--selected]="(filter$ | async) === 'tags'">Tags</a>
+    <a [class.m-tabs__tab--selected]="(filter$ | async) === 'tags'">
+      <m-tooltip icon="local_offer" anchor="bottom">Tags</m-tooltip>
+    </a>
+  </div>
+  <div class="m-tabs__tab" (click)="setFilter('comments')">
+    <a [class.m-tabs__tab--selected]="(filter$ | async) === 'comments'">
+      <m-tooltip icon="chat_bubble" anchor="bottom">Comments</m-tooltip>
+    </a>
+  </div>
+  <div class="m-tabs__tab" (click)="setFilter('subscribers')">
+    <a [class.m-tabs__tab--selected]="(filter$ | async) === 'subscribers'">
+      <m-tooltip icon="people" anchor="bottom">Subscribers</m-tooltip>
+    </a>
+  </div>
+  <div class="m-tabs__tab" (click)="setFilter('votes')">
+    <a [class.m-tabs__tab--selected]="(filter$ | async) === 'votes'">
+      <m-tooltip icon="thumb_up" anchor="bottom">Votes</m-tooltip>
+    </a>
+  </div>
+  <div class="m-tabs__tab" (click)="setFilter('reminds')">
+    <a [class.m-tabs__tab--selected]="(filter$ | async) === 'reminds'">
+      <m-tooltip icon="repeat" anchor="bottom">Reminds / Quotes</m-tooltip>
+    </a>
   </div>
 </div>
 
