(fix): subscriptions, not subscribers for notification filters

--- a/src/app/modules/notifications/v3/list.component.html
+++ b/src/app/modules/notifications/v3/list.component.html
@@ -14,8 +14,8 @@
       <m-tooltip icon="chat_bubble" anchor="top">Comments</m-tooltip>
     </a>
   </div>
-  <div class="m-tabs__tab" (click)="setFilter('subscribers')">
-    <a [class.m-tabs__tab--selected]="(filter$ | async) === 'subscribers'">
+  <div class="m-tabs__tab" (click)="setFilter('subscriptions')">
+    <a [class.m-tabs__tab--selected]="(filter$ | async) === 'subscriptions'">
       <m-tooltip icon="people" anchor="top">Subscribers</m-tooltip>
     </a>
   </div>
