Safari scheduled post time validation

--- a/src/app/common/components/calendar/calendar.component.html
+++ b/src/app/common/components/calendar/calendar.component.html
@@ -1,6 +1,6 @@
 <div class="m-calendar">
   <div class="m-calendar__monthSelector">
-    <span class="m-calendarMonthSelector__displayName">{{
+    <span class="m-calendarMonthSelector__displayName m-legible">{{
       currentMonth | date: 'MMMM yyyy'
     }}</span>
 
