--- a/src/app/modules/composer/components/popup/schedule/schedule.component.scss
+++ b/src/app/modules/composer/components/popup/schedule/schedule.component.scss
@@ -4,6 +4,7 @@
     flex-direction: row;
     align-items: flex-start;
     justify-content: space-between;
+    margin-bottom: 15px;
 
     @media screen and (max-width: $max-mobile) {
       flex-direction: column;
