--- a/src/app/modules/channels/v2/actions/menu.component.html
+++ b/src/app/modules/channels/v2/actions/menu.component.html
@@ -48,6 +48,22 @@
           View Withdrawals
         </span>
       </li>
+      <li (click)="viewBoosts('newsfeed')">
+        <span
+          class="m-dropdownMenu__item"
+          i18n="@@MINDS_BUTTON__USER_DROPDOWN__VIEW_NEWSFEED_BOOSTS"
+        >
+          View Newsfeed Boosts
+        </span>
+      </li>
+      <li (click)="viewBoosts('content')">
+        <span
+          class="m-dropdownMenu__item"
+          i18n="@@MINDS_BUTTON__USER_DROPDOWN__VIEW_SIDEBAR_BOOSTS"
+        >
+          View Sidebar Boosts
+        </span>
+      </li>
       <li (click)="viewEmail()">
         <span
           class="m-dropdownMenu__item"
