Add full pagination to report queue

--- a/src/app/modules/report/juryduty/session/content.component.scss
+++ b/src/app/modules/report/juryduty/session/content.component.scss
@@ -84,6 +84,10 @@
   }
 }
 
-.m-juryDutySessionContent__options m-button {
-  margin: 16px;
+.m-juryDutySessionContent__options {
+  margin-top: 20px;
+
+  m-button {
+    margin: 16px;
+  }
 }
