Add reply button to T2 comments that auto-tags user being replied to

--- a/src/app/modules/comments/comment/comment.component.html
+++ b/src/app/modules/comments/comment/comment.component.html
@@ -476,7 +476,7 @@
         <div
           class="m-commentToolbarButton"
           (click)="toggleReplies()"
-          *ngIf="comment.can_reply && session.isLoggedIn()"
+          *ngIf="session.isLoggedIn()"
         >
           <a
             ><span *ngIf="activityService.allowComment$ | async">Reply</span></a
