Validate max username length

--- a/src/app/modules/channels/v2/edit/info.component.html
+++ b/src/app/modules/channels/v2/edit/info.component.html
@@ -8,6 +8,7 @@
       type="text"
       class="form-control"
       name="displayName"
+      [maxlength]="maxNameLength"
       [ngModel]="service.displayName$ | async"
       (ngModelChange)="service.displayName$.next($event)"
       data-cy="data-minds-channel-display-name"
