Disable monetization in groups because of ACL conflicts #4827

--- a/src/app/modules/composer/components/toolbar/toolbar.component.html
+++ b/src/app/modules/composer/components/toolbar/toolbar.component.html
@@ -46,9 +46,10 @@
       >NSFW</span
     >
   </a>
-
   <a
-    *ngIf="!legacyPaywallEnabled && !(remind$ | async)"
+    *ngIf="
+      !legacyPaywallEnabled && !(remind$ | async) && !(isGroupPost$ | async)
+    "
     class="m-composerToolbar__item"
     [class.m-composerToolbar__item--active]="monetization$ | async"
     [class.m-composerToolbar__item--disabled]="isPosting$ | async"
