--- a/src/app/common/components/feed-filter/feed-filter.component.ng.scss
+++ b/src/app/common/components/feed-filter/feed-filter.component.ng.scss
@@ -11,11 +11,14 @@
     font-size: 15px;
     font-weight: 300;
     line-height: 20px;
+    .m-feedFilter__menu {
+      margin-right: 30px;
+    }
 
     .m-feedFilterMenu__trigger {
       display: flex;
       flex-direction: row;
-      align-items: center;
+      align-items: flex-start;
       justify-content: flex-start;
       font-size: 14px;
       line-height: 19px;
@@ -41,6 +44,9 @@
       > * + * {
         margin-left: 9px;
       }
+    }
+    .m-feedFilter__dropdownWrapper {
+      display: flex;
     }
   }
 
