Add in a vertical scrollbar mixin for use in searchbar

--- a/src/app/modules/search/suggestions/suggestions.component.ng.scss
+++ b/src/app/modules/search/suggestions/suggestions.component.ng.scss
@@ -13,6 +13,7 @@
     width: 100%;
     overflow: scroll;
     overflow: overlay;
+    @include vertical-scroll;
 
     padding: 16px 0;
     margin: 0;
