--- a/src/stylesheets/defaults.scss
+++ b/src/stylesheets/defaults.scss
@@ -81,3 +81,21 @@ $layout-sidebar-width: 80px;
     display: none;
   }
 }
+
+@mixin vertical-scroll {
+  &::-webkit-scrollbar {
+    width: 10px !important;
+
+    @include m-theme() {
+      background-color: rgba(themed($m-borderColor--primary), 0.35);
+    }
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+
+    @include m-theme() {
+      background-color: themed($m-bgColor--contrast);
+    }
+  }
+}
