Change notification tag symbol #4821

--- a/src/app/modules/notifications/v3/notification.component.html
+++ b/src/app/modules/notifications/v3/notification.component.html
@@ -109,7 +109,7 @@
         <m-icon iconId="chat_bubble"></m-icon>
       </ng-template>
       <ng-template ngSwitchCase="tag">
-        <m-icon iconId="face"></m-icon>
+        <m-icon iconId="local_offer"></m-icon>
       </ng-template>
       <ng-template ngSwitchCase="remind">
         <m-icon iconId="repeat"></m-icon>
