Push notif header text #4829

--- a/src/app/modules/settings-v2/account/notifications-v3/push-notifications/push-notifications.component.html
+++ b/src/app/modules/settings-v2/account/notifications-v3/push-notifications/push-notifications.component.html
@@ -9,7 +9,7 @@
     class="m-settingsV2__desc"
     i18n="@@SETTINGS_NOTIFICATIONS_PUSH__DESCRIPTION"
   >
-    Control what email notifications you receive, and when.
+    Control which mobile push notifications you receive, and when.
   </div>
 </m-settingsV2__header>
 <m-loadingSpinner [inProgress]="initializing$ | async"></m-loadingSpinner>
