--- a/src/app/modules/blockchain/token-purchase/v2/order-received/order-received-modal.component.html
+++ b/src/app/modules/blockchain/token-purchase/v2/order-received/order-received-modal.component.html
@@ -3,8 +3,7 @@
     <div class="m-orderReceived__body">
       <div class="m-orderReceivedBody__gratitudeBlock">
         <span class="m-orderReceivedGratitudeBlock__text">
-          Thank you. We've received your order for
-          {{ orderData.tokenAmount | number: '1.1-3' }} Minds tokens.
+          Thank you. We've received your order.
         </span>
       </div>
       <p class="m-orderReceivedBody__estimate">
