--- a/src/app/modules/wallet/components/tokens/tokens.component.html
+++ b/src/app/modules/wallet/components/tokens/tokens.component.html
@@ -51,6 +51,15 @@
   </li>
   <li class="m-tabs__tab">
     <a
+      routerLink="transfers"
+      routerLinkActive="selected"
+      i18n="@@WALLET_V2__ONCHAIN__TRANSFERS"
+    >
+      On-chain transfers
+    </a>
+  </li>
+  <li class="m-tabs__tab">
+    <a
       routerLink="settings"
       routerLinkActive="selected"
       i18n="@@WALLET_V2__TOKENS__SETTINGS"
