--- a/src/app/modules/composer/components/popup/schedule/schedule.component.html
+++ b/src/app/modules/composer/components/popup/schedule/schedule.component.html
@@ -38,7 +38,8 @@
             *ngIf="hasError()"
             class="m-composerPopupField__error"
             i18n="@@M__COMPOSER_SCHEDULE__TIME_ERROR"
-            >Time must be in the future and 24-hr format (e.g. 18:05)</span
+            >Time must be more than 5 minutes in the future and 24-hr format
+            (e.g. 18:05)</span
           >
         </div>
 
