--- a/src/app/modules/channels/v2/header/header.component.scss
+++ b/src/app/modules/channels/v2/header/header.component.scss
@@ -70,6 +70,7 @@
     font-size: 22px;
     line-height: 30px;
     font-weight: bold;
+    text-align: center;
 
     @include m-theme() {
       color: themed($m-textColor--primary);
