Adding feat flag for withdrawals console engine#2019

--- a/src/app/modules/wallet/components/tokens/tokens.component.html
+++ b/src/app/modules/wallet/components/tokens/tokens.component.html
@@ -49,7 +49,7 @@
       Transactions
     </a>
   </li>
-  <li class="m-tabs__tab">
+  <li class="m-tabs__tab" *mIfFeature="'withdrawal-console'">
     <a
       routerLink="transfers"
       routerLinkActive="selected"
