Allow new rich embed removal #4310

--- a/src/app/modules/composer/components/preview/preview.component.html
+++ b/src/app/modules/composer/components/preview/preview.component.html
@@ -30,7 +30,7 @@
   >
     <div
       class="m-composerPreview__close"
-      [hidden]="(isPosting$ | async) || (messageUrl$ | async)"
+      [hidden]="isPosting$ | async"
       (click)="removeRichEmbed()"
     >
       <m-icon iconId="close"></m-icon>
