--- a/src/app/modules/report/juryduty/session/content.component.html
+++ b/src/app/modules/report/juryduty/session/content.component.html
@@ -24,8 +24,15 @@
         "
         [publisher]="report.entity"
       ></m-publisherCard>
-      <ng-template #notUser
-        ><minds-card
+      <ng-template #notUser>
+        <a
+          *ngIf="report.entity.entity_guid"
+          [href]="'/newsfeed/' + report.entity.entity_guid"
+          target="_blank"
+        >
+          <h3 style="margin-top: 10px">View linked entity</h3>
+        </a>
+        <minds-card
           [object]="report.entity"
           [flags]="{ hideToolbar: true }"
           class="mdl-card m-border"
