--- a/src/app/modules/jobs/marketing/marketing.component.html
+++ b/src/app/modules/jobs/marketing/marketing.component.html
@@ -1,8 +1,121 @@
-<m-marketing
-  class="m-aux__marketing m-aux__marketing--hasHero"
-  [useFullWidth]="false"
->
+<m-marketing class="m-jobs" [useFullWidth]="false">
+  <!-- Something happening here... -->
   <div class="m-marketing__main">
+    <div class="m-jobs__wrapper">
+      <div class="m-jobs__header">
+        <h1 i18n="@@JOBS__TITLE">Jobs</h1>
+        <p i18n="@@JOBS__INTRO">
+          Minds is a funded open-source social network with over 1.25 million
+          users that gives power back to the people. Our core values are rooted
+          in privacy, transparency and Internet freedom. We are challenging the
+          traditional tech giants and are established as a leading competitor.
+        </p>
+
+        <div class="m-jobs__images">
+          <div>
+            <img
+              src="/assets/jobs/minds-jobs-programmer.jpg"
+              width="100%"
+              alt="Jobs at Minds.com"
+            />
+          </div>
+          <div>
+            <img
+              src="/assets/jobs/minds-jobs-smartphone.jpg"
+              width="100%"
+              alt="Jobs at Minds.com"
+            />
+          </div>
+          <div>
+            <img
+              src="/assets/jobs/minds-jobs-laptop.jpg"
+              width="100%"
+              alt="Jobs at Minds.com"
+            />
+          </div>
+        </div>
+
+        <p i18n="@@JOBS__CONTACT">
+          We are looking for driven, self motivated, curious and inquisitive
+          individuals who have a desire to disrupt the technology sphere. We
+          want to work with people who have thirst for learning, developing new
+          ideas and a keen interest in free, open source and decentralized
+          technologies.
+        </p>
+      </div>
+
+      <h2 class="m-jobs__subTitle" i18n="@@JOBS__LOGO__TITLE">
+        Join our growing team
+      </h2>
+
+      <div class="m-jobs__group">
+        <h2 class="m-jobs__category" i18n="@@JOBS__CATEGORY">Engineering</h2>
+
+        <div class="m-jobs__job">
+          <div class="m-jobs__job--description">
+            <h3>Lead Full-Stack Developer</h3>
+            <span>Remote</span>
+          </div>
+
+          <div class="m-jobs__job--actions">
+            <m-button size="xsmall" (onAction)="gotoLink('https://domain.com')"
+              >More Info</m-button
+            >
+            <m-button
+              color="blue"
+              size="xsmall"
+              (onAction)="gotoLink('https://domain.com')"
+              >Apply</m-button
+            >
+          </div>
+        </div>
+
+        <div class="m-jobs__job">
+          <div class="m-jobs__job--description">
+            <h3>Full-Stack Developer</h3>
+            <span>Remote</span>
+          </div>
+
+          <div class="m-jobs__job--actions">
+            <m-button size="xsmall" (onAction)="gotoLink('https://domain.com')"
+              >More Info</m-button
+            >
+            <m-button
+              color="blue"
+              size="xsmall"
+              (onAction)="gotoLink('https://domain.com')"
+              >Apply</m-button
+            >
+          </div>
+        </div>
+      </div>
+
+      <div class="m-jobs__group">
+        <h2 class="m-jobs__category" i18n="@@JOBS__CATEGORY">Support</h2>
+
+        <div class="m-jobs__job">
+          <div class="m-jobs__job--description">
+            <h3>Site Admin</h3>
+            <span>Remote</span>
+          </div>
+
+          <div class="m-jobs__job--actions">
+            <m-button size="xsmall" (onAction)="gotoLink('https://domain.com')"
+              >More Info</m-button
+            >
+            <m-button
+              color="blue"
+              size="xsmall"
+              (onAction)="gotoLink('https://domain.com')"
+              >Apply</m-button
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <div class="m-marketing__main">
     <div class="m-aux__hero">
       <div class="m-aux__heroInner">
         <h2 i18n="@@M__JOBS__MKT__MINDS_MARKETING_TITLE" *ngIf="user">
@@ -18,7 +131,7 @@
       </div>
     </div>
 
-    <h1>Vacancies</h1>
+    <h1>Vacancies - clean this all up...</h1>
     <ul class="m-job--marketing--list">
       <li>
         Lead Full-Stack Developer -
@@ -45,5 +158,317 @@
         </a>
       </li>
     </ul>
-  </div>
+  </div> -->
 </m-marketing>
+
+<!-- <div class="m-jobs">
+  <div class="m-jobs__header">
+    <h1 i18n="@@JOBS__TITLE">Branding</h1>
+    <p i18n="@@JOBS__INTRO">
+      The following SVG and PNG files (licensed
+      <a
+        href="https://www.creativecommons.org/licenses/by-sa/4.0/legalcode"
+        target="_blank"
+        >CC BY-SA</a
+      >) should be used for print publications. Logos and trademarks should
+      always be downloaded from this page to ensure high quality. Downloads from
+      other sites may not conform to our standards and may result in improper
+      display or use of our protected logos and trademarks.
+    </p>
+
+    <p i18n="@@JOBS__CONTACT">
+      Please contact <a href="mailto:info@minds.com">info@minds.com</a> should
+      you require further information.
+    </p>
+  </div>
+
+  <div class="m-jobs__group">
+    <h2 i18n="@@JOBS__LOGO__TITLE">Logo Downloads</h2>
+    <p i18n="@@JOBS__LOGO__INTRO">
+      The logo is available in both PNG and SVG formats across both light and
+      dark modes as well as greyscale.
+    </p>
+
+    <div class="m-jobs__grid">
+      <div class="m-jobs__gridItem">
+        <div class="m-jobs__gridItemImage">
+          <img
+            src="/assets/branding/mindsLogoLight.svg"
+            width="80%"
+            alt=""
+          />
+        </div>
+
+        <div class="m-jobs__gridItemActions">
+          <a
+            href="/assets/branding/mindsLogoLight.png"
+            target="_blank"
+            ><i class="material-icons">get_app</i> PNG</a
+          >
+          <a
+            href="/assets/branding/mindsLogoLight.svg"
+            target="_blank"
+            ><i class="material-icons">get_app</i>SVG</a
+          >
+        </div>
+      </div>
+
+      <div class="m-jobs__gridItem m-jobs__gridItemDark">
+        <div class="m-jobs__gridItemImage">
+          <img
+            src="/assets/branding/mindsLogoDark.svg"
+            width="80%"
+            alt=""
+          />
+        </div>
+
+        <div class="m-jobs__gridItemActions">
+          <a
+            href="/assets/branding/mindsLogoDark.png"
+            target="_blank"
+            ><i class="material-icons">get_app</i> PNG</a
+          >
+          <a
+            href="/assets/branding/mindsLogoDark.svg"
+            target="_blank"
+            ><i class="material-icons">get_app</i>SVG</a
+          >
+        </div>
+      </div>
+
+      <div class="m-jobs__gridItem">
+        <div class="m-jobs__gridItemImage">
+          <img
+            src="/assets/branding/mindsLogoBulbLight.svg"
+            width="90%"
+            alt=""
+          />
+        </div>
+
+        <div class="m-jobs__gridItemActions">
+          <a
+            href="/assets/branding/mindsBulb.png"
+            target="_blank"
+            ><i class="material-icons">get_app</i> PNG</a
+          >
+          <a
+            href="/assets/branding/mindsLogoBulbLight.svg"
+            target="_blank"
+            ><i class="material-icons">get_app</i>SVG</a
+          >
+        </div>
+      </div>
+
+      <div class="m-jobs__gridItem m-jobs__gridItemDark">
+        <div class="m-jobs__gridItemImage">
+          <img
+            src="/assets/branding/mindsLogoBulbDark.svg"
+            width="90%"
+            alt=""
+          />
+        </div>
+
+        <div class="m-jobs__gridItemActions">
+          <a
+            href="/assets/branding/mindsBulb.png"
+            target="_blank"
+            ><i class="material-icons">get_app</i> PNG</a
+          >
+          <a
+            href="/assets/branding/mindsLogoBulbDark.svg"
+            target="_blank"
+            ><i class="material-icons">get_app</i>SVG</a
+          >
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="m-jobs__group">
+    <h2 i18n="@@JOBS__MOBILE__TITLE">Mobile Product Images</h2>
+    <p i18n="@@JOBS__MOBILE__INTRO">
+      High resolution product images using the Minds app for iOS
+    </p>
+
+    <div class="m-jobs__grid">
+      <div class="m-jobs__gridItem">
+        <div class="m-jobs__gridItemTitle">
+          Newsfeed &middot; iOS
+        </div>
+        <div class="m-jobs__gridItemImage">
+          <img
+            src="/assets/branding/mobileNewsfeedSmall.png"
+            width="80%"
+            alt="Minds Newsfeed - iOS"
+          />
+        </div>
+
+        <div class="m-jobs__gridItemActions">
+          <a
+            href="/assets/branding/mobileNewsfeedLarge.png"
+            target="_blank"
+            ><i class="material-icons">get_app</i> PNG</a
+          >
+        </div>
+      </div>
+
+      <div class="m-jobs__gridItem">
+        <div class="m-jobs__gridItemTitle">
+          Discovery &middot; iOS
+        </div>
+        <div class="m-jobs__gridItemImage">
+          <img
+            src="/assets/branding/mobileDiscoverySmall.png"
+            width="80%"
+            alt="Minds Discovery - iOS"
+          />
+        </div>
+
+        <div class="m-jobs__gridItemActions">
+          <a
+            href="/assets/branding/mobileDiscoveryLarge.png"
+            target="_blank"
+            ><i class="material-icons">get_app</i> PNG</a
+          >
+        </div>
+      </div>
+
+      <div class="m-jobs__gridItem">
+        <div class="m-jobs__gridItemTitle">
+          Channel &middot; iOS
+        </div>
+        <div class="m-jobs__gridItemImage">
+          <img
+            src="/assets/branding/mobileChannelSmall.png"
+            width="80%"
+            alt="Minds Channel - iOS"
+          />
+        </div>
+
+        <div class="m-jobs__gridItemActions">
+          <a
+            href="/assets/branding/mobileChannelLarge.png"
+            target="_blank"
+            ><i class="material-icons">get_app</i> PNG</a
+          >
+        </div>
+      </div>
+
+      <div class="m-jobs__gridItem">
+        <div class="m-jobs__gridItemTitle">
+          Wallet &middot; iOS
+        </div>
+        <div class="m-jobs__gridItemImage">
+          <img
+            src="/assets/branding/mobileWalletSmall.png"
+            width="80%"
+            alt="Minds Wallet - iOS"
+          />
+        </div>
+
+        <div class="m-jobs__gridItemActions">
+          <a
+            href="/assets/branding/mobileWalletLarge.png"
+            target="_blank"
+            ><i class="material-icons">get_app</i> PNG</a
+          >
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="m-jobs__group">
+    <h2 i18n="@@JOBS__WEB__TITLE">Web Product Images</h2>
+    <p i18n="@@JOBS__WEB__INTRO">
+      High resolution product images using minds.com
+    </p>
+
+    <div class="m-jobs__grid">
+      <div class="m-jobs__gridItem">
+        <div class="m-jobs__gridItemTitle">
+          Newsfeed &middot; Web
+        </div>
+        <div class="m-jobs__gridItemImage">
+          <img
+            src="/assets/branding/webNewsfeedSmall.png"
+            width="80%"
+            alt="Minds Newsfeed - Web"
+          />
+        </div>
+
+        <div class="m-jobs__gridItemActions">
+          <a
+            href="/assets/branding/webNewsfeedLarge.png"
+            target="_blank"
+            ><i class="material-icons">get_app</i> PNG</a
+          >
+        </div>
+      </div>
+
+      <div class="m-jobs__gridItem">
+        <div class="m-jobs__gridItemTitle">
+          Discovery &middot; Web
+        </div>
+        <div class="m-jobs__gridItemImage">
+          <img
+            src="/assets/branding/webDiscoverySmall.png"
+            width="80%"
+            alt="Minds Discovery - Web"
+          />
+        </div>
+
+        <div class="m-jobs__gridItemActions">
+          <a
+            href="/assets/branding/webDiscoveryLarge.png"
+            target="_blank"
+            ><i class="material-icons">get_app</i> PNG</a
+          >
+        </div>
+      </div>
+
+      <div class="m-jobs__gridItem">
+        <div class="m-jobs__gridItemTitle">
+          Channel &middot; Web
+        </div>
+        <div class="m-jobs__gridItemImage">
+          <img
+            src="/assets/branding/webChannelSmall.png"
+            width="80%"
+            alt="Minds Channel - Web"
+          />
+        </div>
+
+        <div class="m-jobs__gridItemActions">
+          <a
+            href="/assets/branding/webChannelLarge.png"
+            target="_blank"
+            ><i class="material-icons">get_app</i> PNG</a
+          >
+        </div>
+      </div>
+
+      <div class="m-jobs__gridItem">
+        <div class="m-jobs__gridItemTitle">
+          Wallet &middot; Web
+        </div>
+        <div class="m-jobs__gridItemImage">
+          <img
+            src="/assets/branding/webWalletSmall.png"
+            width="80%"
+            alt="Minds Wallet - Web"
+          />
+        </div>
+
+        <div class="m-jobs__gridItemActions">
+          <a
+            href="/assets/branding/webWalletLarge.png"
+            target="_blank"
+            ><i class="material-icons">get_app</i> PNG</a
+          >
+        </div>
+      </div>
+    </div>
+  </div>
+</div> -->
+
+<!-- <m-marketing__footer></m-marketing__footer> -->
